--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 GATSBY_CONTENTFUL_ACCESS_TOKEN=hT6QbBH4vVKBFPj0eRu8rIb0n5W08bHdwF_zY-PV4UE
 GATSBY_CONTENTFUL_SPACE_ID=ztslptg2jjpe
+GATSBY_CONTENTFUL_SPACE_IDII=nothing
